@@ -11,6 +11,7 @@ IF( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
 ELSE( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
     IF( RELEASE )
     install(FILES q4wine.svg DESTINATION ${PIXMAPS_ENTRY_PATH}/scalable/apps)
+    install(FILES q4wine-ambiance.svg DESTINATION ${PIXMAPS_ENTRY_PATH}/scalable/apps)
     install(FILES q4wine-ambiance.svg DESTINATION ${PIXMAPS_UNITY_ENTRY_PATH}/scalable/apps RENAME q4wine.svg)
     ENDIF( RELEASE )
 ENDIF( ${CMAKE_SYSTEM_NAME} MATCHES Darwin )
