@@ -3,6 +3,7 @@ Version 1.2-r3
   - Taiwan translation (thx 2 Jeff Huang);
   - Use icons from the system icon theme where possible [BUG-22];
   - Replace default raster icons with SVG analogs [BUG-21];
+  - Add an app option to switch default/monochrome icon [BUG-21];
 
 Version 1.2-r2
  Added:
